<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_group_selector"
    
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/group_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/add_group_title_selector"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_group"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <com.diandian.mycall.view.BootstrapEditText
        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/input_group_name"
        bootstrapbutton:be_roundedCorners="true"
        bootstrapbutton:be_state="success" />

    <LinearLayout
        android:id="@+id/add_contact_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <com.diandian.mycall.view.BootstrapButton
            android:id="@+id/group_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/group_ok"
            bootstrapbutton:bb_icon_right="fa-android"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="default" />

        <com.diandian.mycall.view.BootstrapButton
            android:id="@+id/group_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/group_cancel"
            bootstrapbutton:bb_icon_right="fa-android"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="default" />
    </LinearLayout>

</LinearLayout>