<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff" >

    <!-- /////////////////中间部门///////////////////////// -->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/scroll_view_content"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical" >

            <!-- /////////////////////////头部///////////////////////////// -->

            <LinearLayout
                android:id="@+id/contact_header"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/head_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:src="@drawable/love1" />

                <LinearLayout
                    android:id="@+id/user_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical" >

                    <com.diandian.mycall.view.BootstrapEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="12dp"
                        android:hint="@string/input_user_name"
                        bootstrapbutton:be_roundedCorners="true"
                        bootstrapbutton:be_state="success" />

                    <com.diandian.mycall.view.BootstrapEditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="12dp"
                        android:hint="@string/input_phone_number"
                        android:inputType="number"
                        bootstrapbutton:be_roundedCorners="true"
                        bootstrapbutton:be_state="success" />
                </LinearLayout>
            </LinearLayout>

            <!-- 头部结束 -->


            <!-- /////////////中部///////////////// -->

            <LinearLayout
                android:id="@+id/contacts_content_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_header"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/contacts_group_content"
                    android:layout_width="270dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/add_group_title"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:text="加组"
                        android:textSize="20sp" />

                    <!-- 组 -->

                    <Spinner
                        android:id="@+id/choose_group"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:textSize="20sp" />
                </LinearLayout>

                <!-- 备注 -->

                <LinearLayout
                    android:id="@+id/contacts_group_content_remark"
                    android:layout_width="270dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/add_remark"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:text="备注"
                        android:textSize="20sp" />

                    <com.diandian.mycall.view.BootstrapEditText
                        android:id="@+id/et_remark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/input_contact_remark"
                        bootstrapbutton:be_roundedCorners="true"
                        bootstrapbutton:be_state="success" />
                </LinearLayout>

                <!-- 动态添加部分 -->

            </LinearLayout>
            <!-- 中部结束 -->


            <!-- 尾部开始 -->
            <!-- //////////////////下边部分////////////////////// -->

            <LinearLayout
                android:id="@+id/new_contact_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/contacts_content_group"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:orientation="vertical" >

                <com.diandian.mycall.view.BootstrapButton
                    android:id="@+id/more_info"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_all_att"
                    bootstrapbutton:bb_icon_right="fa-android"
                    bootstrapbutton:bb_roundedCorners="true"
                    bootstrapbutton:bb_type="success" />

                <LinearLayout
                    android:id="@+id/add_allitem"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <com.diandian.mycall.view.BootstrapButton
                        android:id="@+id/contact_exit"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:text="@string/exit"
                        bootstrapbutton:bb_icon_right="fa-android"
                        bootstrapbutton:bb_roundedCorners="true"
                        bootstrapbutton:bb_type="default" />

                    <com.diandian.mycall.view.BootstrapButton
                        android:id="@+id/contact_save"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/save"
                        bootstrapbutton:bb_icon_right="fa-android"
                        bootstrapbutton:bb_roundedCorners="true"
                        bootstrapbutton:bb_type="default" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>